# fzfx

./: .gitignore  .hlint.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  flake.nix  fzfx.cabal  result
.githooks/: pre-commit
.github/workflows/: ci.yml
notes/: bugs-2026-04-01.md  proposal-2026-04-01-state-machine.md  proposal-2026-04-01-test-suite.md
shell/: bash-completion.bash
src/: Main.hs
src/Fzfx/: Core.hs
test/: Test.hs  integration.sh
