cabal-version: 2.4
name:          fzfx
version:       0.1.0
build-type:    Simple

executable fzfx
  main-is:          Main.hs
  hs-source-dirs:   src
  default-language: GHC2021
  default-extensions:
    LambdaCase
    OverloadedStrings
    RecordWildCards
  ghc-options:      -Wall -O2
  build-depends:
    , base          >= 4.16 && < 5
    , bytestring    >= 0.11
    , containers    >= 0.6
    , directory     >= 1.3
    , filepath      >= 1.4
    , text          >= 2.0
    , typed-process >= 0.2.8
    , unix          >= 2.7
