cabal-version: 3.0
name:          fzfx
version:       0.1.0
build-type:    Simple

library fzfx-internal
  exposed-modules: Fzfx.Core
  hs-source-dirs:  src
  default-language: GHC2021
  default-extensions:
    LambdaCase
    OverloadedStrings
    RecordWildCards
  ghc-options:      -Wall
  build-depends:
    , base          >= 4.16 && < 5
    , bytestring    >= 0.11
    , containers    >= 0.6
    , filepath      >= 1.4
    , text          >= 2.0

executable fzfx
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    Fzfx.Core
  default-language: GHC2021
  default-extensions:
    LambdaCase
    OverloadedStrings
    RecordWildCards
  ghc-options:      -Wall -O2
  build-depends:
    , fzfx:fzfx-internal
    , base          >= 4.16 && < 5
    , bytestring    >= 0.11
    , containers    >= 0.6
    , directory     >= 1.3
    , filepath      >= 1.4
    , text          >= 2.0
    , typed-process >= 0.2.8
    , unix          >= 2.7

test-suite fzfx-test
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  hs-source-dirs:   test
  default-language: GHC2021
  default-extensions:
    LambdaCase
    OverloadedStrings
  ghc-options:      -Wall
  build-depends:
    , fzfx:fzfx-internal
    , base >= 4.16 && < 5
    , text >= 2.0
