cabal-version: 3.0
name:          fzfx
version:       0.1.0
license:       MIT
license-file:  LICENSE
author:        Tavis Rudd
maintainer:    tavis@damnsimple.com
homepage:      https://github.com/tavisrudd/fzfx
bug-reports:   https://github.com/tavisrudd/fzfx/issues
synopsis:      FZF file picker with ripgrep integration
description:   An interactive file picker combining fd, ripgrep, and fzf with
               directory navigation, git status filtering, preview, and tmux support.
category:      Development
build-type:    Simple

library fzfx-internal
  exposed-modules: Fzfx.Core
  hs-source-dirs:  src
  default-language: GHC2021
  default-extensions:
    LambdaCase
    OverloadedStrings
    RecordWildCards
  ghc-options:      -Wall
  build-depends:
    , base          >= 4.16 && < 5
    , bytestring    >= 0.11
    , containers    >= 0.6
    , filepath      >= 1.4
    , text          >= 2.0

executable fzfx
  main-is:          Main.hs
  hs-source-dirs:   src
  other-modules:    Fzfx.Core
  default-language: GHC2021
  default-extensions:
    LambdaCase
    OverloadedStrings
    RecordWildCards
  ghc-options:      -Wall -O2
  build-depends:
    , fzfx:fzfx-internal
    , base                 >= 4.16 && < 5
    , bytestring           >= 0.11
    , containers           >= 0.6
    , directory            >= 1.3
    , filepath             >= 1.4
    , optparse-applicative >= 0.17
    , text                 >= 2.0
    , typed-process        >= 0.2.8
    , unix                 >= 2.7

test-suite fzfx-test
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  hs-source-dirs:   test
  default-language: GHC2021
  default-extensions:
    LambdaCase
    OverloadedStrings
  ghc-options:      -Wall
  build-depends:
    , fzfx:fzfx-internal
    , base >= 4.16 && < 5
    , text >= 2.0
